src/objects/Ticket__c.object
<CustomObject>
    <description>PMO: Usually used after the system go live. Stores all the complaints, requests, answers that raised by end users when they are using the system.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ticket</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_Date__c</fullName>
        <label>Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_By__c</fullName>
        <label>Deployment By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ticket1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <label>Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Remarks__c</fullName>
        <label>Deployment Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fix_Category__c</fullName>
        <label>Fix Category</label>
        <picklist>
            <picklistValues>
                <fullName>Access Rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP Jump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Translation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raised_By__c</fullName>
        <label>Raised By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Low 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Limitation of SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Requirement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <label>Test Result</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ticket2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testing_Remarks__c</fullName>
        <label>Testing Remarks</label>
        <type>TextArea</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>